[SPARK-53990] Use Java `(Map|Set).of` instead of `Collections.(empty|singleton)(Map|Set)`
### What changes were proposed in this pull request?

This PR aims to use Java 9+ `Map.of` and `Set.of` APIs instead of the following.
- `Collections.emptySet`
- `Collections.emptyMap`
- `Collections.singletonMap`
- `Collections.singletonSet`

### Why are the changes needed?

New Java APIs are concise and more intuitive.

```java
- return Collections.emptyMap();
+ return Map.of();
```

```java
- Collections.singletonMap(getCurrentStateId() + 1, state),
+ Map.of(getCurrentStateId() + 1, state),
```

In addition, this is aligned with
- apache/spark#51942
- apache/spark#51961
- apache/spark#51954

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

Pass the CIs.

### Was this patch authored or co-authored using generative AI tooling?

No.

Closes #401 from dongjoon-hyun/SPARK-53990.

Authored-by: Dongjoon Hyun <dongjoon@apache.org>
Signed-off-by: Dongjoon Hyun <dongjoon@apache.org>